--- a/index.html
+++ b/index.html
@@ -174,12 +174,25 @@
 
 <!-- Постоянные клиенты -->
 
+  <div class="container">
+
       <section class="section">
+        
+        <h2 class="team-head">Постоянные клиенты</h2>
+
+        <ul class="list clients-list">
+          <li class="clients-list-item"><a href="" class="clients-list-item-link"><svg class="clients-list-item-icon"><use href="./images/sprite.svg#icon-Logo"></use></svg></a></li>
+          <li class="clients-list-item"><a href="" class="clients-list-item-link"><svg class="clients-list-item-icon"><use href="./images/sprite.svg#icon-Logo-1"></use></svg></a></li>
+          <li class="clients-list-item"><a href="" class="clients-list-item-link"><svg class="clients-list-item-icon"><use href="./images/sprite.svg#icon-Logo-2"></use></svg></a></li>
+          <li class="clients-list-item"><a href="" class="clients-list-item-link"><svg class="clients-list-item-icon"><use href="./images/sprite.svg#icon-Logo-3"></use></svg></a></li>
+          <li class="clients-list-item"><a href="" class="clients-list-item-link"><svg class="clients-list-item-icon"><use href="./images/sprite.svg#icon-Logo-4"></use></svg></a></li>
+          <li class="clients-list-item"><a href="" class="clients-list-item-link"><svg class="clients-list-item-icon"><use href="./images/sprite.svg#icon-Logo-5"></use></svg></a></li>
+        </ul>
 
 
 
       </section>
-
+  </div>
 
 
     </main>
