--- a/portfolio.html
+++ b/portfolio.html
@@ -141,21 +141,52 @@
 </main>
 
 <!-- Футер -->
-<footer class="footer-class">
-    <div class="container">
-        <a class="logo-revers link" href="./index.html"><span class="logo-web">Web</span>Studio</a>
 
-        <address>
+<footer>
+    <div class="container footer-class">
 
-            <ul class="list footer-list">
-                <li class="footer-list-item"><a class="adress link" target="_blank"
-                        href="https://goo.gl/maps/DfeSUj1z1ApNC3bA6" rel="noopener; noreferrer">г. Киев, пр-т Леси
-                        Украинки, 26</a></li>
-                <li class="footer-list-item"><a class="footer-mailtel link"
-                        href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="footer-mailtel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <div class="footer-address">
+            <a class="logo-revers link" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+
+            <address class="address">
+
+                <ul class="list footer-list">
+                    <li class="footer-list-item"><a class="adress link" target="_blank"
+                            href="https://goo.gl/maps/DfeSUj1z1ApNC3bA6" rel="noopener; noreferrer">г. Киев, пр-т Леси
+                            Украинки, 26</a></li>
+                    <li class="footer-list-item"><a class="footer-mailtel link"
+                            href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="footer-mailtel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
+        <div class="footer-socials">
+            <h3 class="join-us">ПРИСОЕДИНЯЙТЕСЬ</h3>
+
+            <ul class="list footer-socials-icons">
+                <li class="footer-socials-icons-list"> <a href="https://www.instagram.com/" target="_blank"
+                        rel="noopener; noreferrer" class="social-list-item-link-footer"> <svg
+                            class="footer-social-icon">
+                            <use href="./images/sprite.svg#icon-instagram-2"></use>
+                        </svg> </a> </li>
+                <li class="footer-socials-icons-list"> <a href="https://twitter.com/?lang=uk" target="_blank"
+                        rel="noopener; noreferrer" class="social-list-item-link-footer" class="social-list-item-link">
+                        <svg class="footer-social-icon">
+                            <use href="./images/sprite.svg#icon-twitter-1"></use>
+                        </svg> </a> </li>
+                <li class="footer-socials-icons-list"> <a href="https://www.facebook.com/" target="_blank"
+                        rel="noopener; noreferrer" class="social-list-item-link-footer"> <svg
+                            class="footer-social-icon">
+                            <use href="./images/sprite.svg#icon-facebook-1"></use>
+                        </svg> </a> </li>
+                <li class="footer-socials-icons-list"> <a href="https://www.linkedin.com/" target="_blank"
+                        rel="noopener; noreferrer" class="social-list-item-link-footer"> <svg
+                            class="footer-social-icon">
+                            <use href="./images/sprite.svg#icon-linkedin-1"></use>
+                        </svg> </a> </li>
             </ul>
-        </address>
+        </div>
+
     </div>
 </footer>
     
