--- a/index.html
+++ b/index.html
@@ -29,10 +29,17 @@
         </nav>
       
         <ul class="list-phone list">
-          <li class="list-phone-item"><a class="header-mailtel link" href="mailto:info@devstudio.com"> info@devstudio.com</a>
+          <li class="list-phone-item">
+            <a class="header-mailtel link" href="mailto:info@devstudio.com">
+              <svg class="envelope-icon"> <use href=./images/sprite.svg#icon-envelope-hover></use> </svg> info@devstudio.com
+            </a>
           </li>
         
-          <li class="list-phone-item"><a class="header-mailtel link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li class="list-phone-item">
+            <a class="header-mailtel link" href="tel:+380961111111">
+              <svg class="phone-icon">
+                <use href=./images/sprite.svg#icon-phone></use>
+              </svg> +38 096 111 11 11</a></li>
         </ul>
 
       </div>
